tests/typing/bad/testfile-affect-1.jl
mutable struct MyStruct a end
x = MyStruct(2)
1.a = 3
